--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,8 @@
 
 .dark-theme {
   --clr-bcg: #282c35;
-  --clr-font: #fff;
-  --clr-primary: #ffa7c4;
+  --clr-font: #FFC745;
+  --clr-primary: #fff;
 }
 
 .light-theme {
@@ -32,7 +32,41 @@ body {
     transition: all 0.3s linear;
 }
 
+.headers{
+  max-width: 650px;
+  display: flex;
+  justify-content: space-between;
+  margin: 3rem auto 0;
+  padding: 1rem;
+}
+
+.btn{
+  border: none;
+  background-color: var(--clr-font);
+  color: var(--clr-bcg);
+  padding: 1rem;
+  border-radius: 5px;
+}
+
+.dark-btn {
+  border: none;
+  background-color: var(--clr-font);
+  color: var(--clr-bcg);
+  padding: 1rem;
+  border-radius: 5px;
+  font-weight: 600;
+}
 
 .single-data{
   margin: 4rem auto 4rem;
+  max-width: 650px;
+  padding: 0 1rem;
+}
+
+.single-data h2{
+  color: var(--clr-font);
+}
+
+.single-data h3, h5, p {
+  color: var(--clr-primary);
 }
